# rhai

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.template  t.txt
.github/workflows/: benchmark.yml  build.yml  ci.yaml  oss-fuzz.yml
benches/: eval_array.rs  eval_expression.rs  eval_scope.rs  eval_type.rs  iterations.rs
codegen/: Cargo.toml
codegen/src/: attrs.rs  custom_type.rs  function.rs  lib.rs  module.rs  register.rs  rhai_module.rs
codegen/tests/: test_custom_type.rs  test_derive.rs  test_functions.rs  test_modules.rs  (+1 more)
examples/: README.md  custom_types.rs  custom_types_and_methods.rs  pause_and_resume.rs
fuzz/: Cargo.toml  clusterfuzz-testcase-fuzz_serde-4745120863813632  clusterfuzz-testcase-scripting-4756460147900416
fuzz/fuzz_targets/: ast.rs  fuzz_serde.rs  rhai_keywords.dict  scripting.rs
scripts/: fuzzing_seed_corpus_all.rhai
src/: README.md  config.rs  defer.rs  engine.rs  lib.rs  optimizer.rs  parser.rs  reify.rs  restore.rs  tests.rs  tokenizer.rs
tests/: README.md  arrays.rs  assignments.rs  binary_ops.rs  bit_fields.rs  blobs.rs  bool_op.rs  build_type.rs  call_fn.rs  chars.rs  closures.rs  comments.rs  compound_equality.rs  constants.rs  custom_syntax.rs  data_size.rs  debugging.rs  decrement.rs  eval.rs  expressions.rs  float.rs  fn_ptr.rs  for.rs  functions.rs  get_set.rs  if_block.rs  increment.rs  internal_fn.rs  looping.rs  maps.rs  math.rs  method_call.rs  mismatched_op.rs  modules.rs  native.rs  not.rs  number_literals.rs  operations.rs  ops.rs  optimizer.rs  (+23 more)
tools/: README.md  keywords.txt  reserved.txt
(+137 files in other folders)
