[package]
name = "rhai-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = "1.0.78"
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = "0.4"
rhai = { path = "..", features = ["fuzz", "decimal", "metadata", "debugging"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "scripting"
path = "fuzz_targets/scripting.rs"
test = false
doc = false

[[bin]]
name = "ast"
path = "fuzz_targets/ast.rs"
test = false
doc = false
